Restructuring files and env variables
